sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:12: error: value -* is not a member of Int
      var v = getValeur(i-*ecart-(c-1)*ecart)
                         ^